forgin length warning issue overlap issue fixed :

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -7146,3 +7146,8 @@ left: 17rem;
     }
   }
 }
+.forging-length-wrapper {
+  .text-help {
+       min-width: 160px;
+  }
+}
